# simporter_task

./: .gitignore  Dockerfile  README.md  dev.sh  docker-compose.yaml  prod.sh  pyproject.toml  requirements.txt  test.sh  test_all.py
app/: __init__.py
app/api/: __init__.py  arg_parser.py  dao.py  data_processor.py  marshal_models.py  routes.py
app/api_v1/: __init__.py  arg_parser.py  dao.py  data.csv  data_processor.py  marshal_models.py  routes.py
app/plots/: __init__.py  routes.py
app/static/js/: plots.js
app/templates/: plots.html
