[tool.poetry]
name = "simporter_task"
version = "0.1.0"
description = ""
authors = ["rostislav <rostmoguchiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"
flask-restx = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
